2007-08-13  Albert Chu <chu11@llnl.gov>

	* common/doc/argp-common-hostranged-options.man: Fix potential
	pre-processor bug.

	* ipmiconsole/: Add Asus IPMI 2.0 workarounds.

	* ipmiconsole/src/ipmiconsole/ipmiconsole_config.c (_usage): Fix
	usage help.
	
	* configure.ac: Update version and library versions for test release.

2007-08-10  Albert Chu <chu11@llnl.gov>

	* ipmipower/, ipmiconsole/, ipmimonitoring/: Support ASUS P5m2
	workaround.

	* ipmimonitoring/src/ipmimonitoring.c (_cmdline_parse): Fix
	--debugdump option.

	* configure.ac: Update version and library versions for test release.
	
2007-08-09  Albert Chu <chu11@llnl.gov>

        * ipmipower/src/ipmipower_config.c (_cb_k_g): Fix configuration
        logic error.

	* ipmipower/src/ipmipower_prompt.c (_cmd_config): Fix config
	output display error.

2007-08-07  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-config-value.h,
	bmc-config/src/bmc-config-validate.c
	(number_range_one_byte_non_zero): New function.

	* bmc-config/src/bmc-sol-conf-section.c
	(bmc_sol_conf_section_get): Adjust character_accumulate_interval
	field to only support non-zero input.  Zero is a reserved number.
	
2007-08-06  Albert Chu <chu11@llnl.gov>

	* common/src/secure.c (secure_memset), common/src/arp-common.c
	(__secure_memset): Fix secure/guaranteed memset corner case.
	
2007-08-06  Albert Chu <chu11@llnl.gov>

	* ac_ipmi_monitoring_sdr_cache_dir.m4,
	ac_ipmi_monitoring_sensor_config_file.m4,
	ac_ipmidetect_config_file.m4, ac_ipmidetectd_config_file.m4,
	ac_ipmipower_config_file.m4: Replace hard-coded /etc and /var with
	${sysconfdir} and ${localstatedir} respecively.  Remove option to
	specify config files.  Location of config files is now controlled
	through setting of --localstatedir and --sysconfidr.
 
 	* ipmimonitoring/Makefile.am: Install w/ correct ./configure
	location.
 
 	* freeipmi.spec.in: Use %{_localstatedir} instead of /var.
 
 	* bmc-watchdog/Makefile.am: Fix distcheck.
