@@ -1,3 +1,8 @@
+2007-08-14  Albert Chu <chu11@llnl.gov>
+
+        * bmc-config/src/bmc-config-sections.c
+        (bmc_config_section_set_value): Add error messages.
+	
 2007-08-13  Albert Chu <chu11@llnl.gov>
 
 	* common/doc/argp-common-hostranged-options.man: Fix potential
